# breakout

./: .gitignore  Cargo.toml  Info.plist  Makefile  build.rs  metal-dbg.sh
rooibos-platform/: Cargo.toml  build.rs
rooibos-platform/Apple/: Package.swift
rooibos-platform/src/: lib.rs
shaders/: .gitattributes  Public.h  Shaders.metal  build.sh
src/: audio.rs  ecs.rs  gfx.rs  lib.rs  main.rs  math.rs  world.rs
src/swift/: GpuCaptureManager.swift  Package.swift
