[package]
name = "breakout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Metal Rendering
metal = "0.24"
objc = "0.2"
foreign-types-shared = "0.1" # Use same version as `objc` & `metal`
cstr = "0.2"

# Window Management
fermium = "20022" # Bundles SDL 2.0.16

# ECS
legion = { version ="0.4", default-features = false }

# Math
ultraviolet = { version = "0.9", features = [ "bytemuck", "f64", "int"] }

# Misc
static_assertions = "1.1"


# Enable minimal optimizations for our debug code
[profile.dev]
opt-level = 1

# Enable aggressive optimizations for all dependencies all of the time
[profile.dev.package."*"]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
