[package]
name = "breakout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Metal Rendering
metal = "0.32"
objc = { version = "0.2", features = ["exception"] }
cstr = "0.2"

# Window Management
fermium = "22605"  # Bundles SDL 2.26.5

# Mac-ism
embed_plist = "1.2"

# Math
ultraviolet = { version = "0.10", features = [ "bytemuck", "f64", "int"] }
rand = "0.9"

# Misc
static_assertions = "1.1"
pretty_assertions = "1.2"
chrono = "0.4"

# Enable minimal optimizations for our debug code
[profile.dev]
opt-level = 1

[profile.release]
debug = 1

# Enable aggressive optimizations for all dependencies all of the time
[profile.dev.package."*"]
opt-level = 3

[profile.release.package."*"]
opt-level = 3

[features]
default = []
cargo_check = ["fermium/cargo_check"]
# This is used in the objc crate
cargo-clippy = ["cargo_check"] 